tdf#158409: RTF import: use current run props for fields

Fields import was not using current run properties causing
fallback to used style or default style what is wrong for RTF.

Change-Id: I0189c6122b703a23ff910ee38da78aa05ac4d9f8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160387
Tested-by: Jenkins
Reviewed-by: Vasily Melenchuk <vasily.melenchuk@cib.de>